--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,18 @@
 .fa-spin-hover:hover {
-   -webkit-animation: fa-spin 2s infinite linear;
-   animation: fa-spin 2s infinite linear;
+  -webkit-animation: fa-spin 2s infinite linear;
+  animation: fa-spin 2s infinite linear;
 }
 
-h1.center {
-    text-align: center;
+.center-me {
+  text-align: center;
+}
+
+button {
+  background-color: #E6E9EB;
+  border: 2px;
+  padding: 15px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 50%;
 }
